# Duci

./: README.md  READNE.md
api/: .gitignore  pyproject.toml  pyvenv.cfg
api/alembic/: env.py
api/alembic/versions/: 153415849c0a_add_comparrison_table.py
api/src/api/: main.py
api/src/api/context/: config.py
api/src/api/controller/: routes.py
api/src/api/controller/v1/endpoints/: comparison.py
api/src/api/db/: connection.py
api/src/api/models/: comparison.py
api/src/api/services/: comparisson_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  ComparisonApp.tsx
frontend/src/components/ui/: button.tsx  slider.tsx
